syntax = "proto3";

package muServerImpl;

message HelloRequest {
  string arg1 = 1;
  string arg2 = 2;
}

message HelloResponse {
  string arg1 = 1;
  string arg2 = 2;
}

service ProtoGreeter {
  rpc sayHelloProto (HelloRequest) returns (HelloResponse);
}
